site build based off of commit 5abc8fd637bb65db91b746623314b536c6f46e15 on master branch

--- a/europe/europe1.html
+++ b/europe/europe1.html
@@ -1,16 +1,16 @@
 <html>
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8"></meta>
 
-  <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
-
-  
-  <link rel="stylesheet" media="(orientation: landscape)" href="/landscape.css">
+  <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico"></link>
 
   
-  <link rel="stylesheet" media="(orientation: portrait)" href="/portrait.css">
+  <link rel="stylesheet" media="(orientation: landscape)" href="/landscape.css"></link>
 
-  <link rel="stylesheet" href="/highlightjs/default.min.css">
+  
+  <link rel="stylesheet" media="(orientation: portrait)" href="/portrait.css"></link>
+
+  <link rel="stylesheet" href="/highlightjs/default.min.css"></link>
 
   <title>Europe, Day 1</title>
 </head>
@@ -30,7 +30,7 @@
 <div class="table-of-contents"><ul><li><a href="#europe_day_1">Europe, Day 1</a></li></ul></div>
 
 <h1 id="europe_day_1">Europe, Day 1</h1>
-<p><a href="vineet_ice.jpg"><img src="vineet_ice_small.jpg" alt="" height="304">
+<p><a href="vineet_ice.jpg"><img src="vineet_ice_small.jpg" alt="" height="304"></img>
 </a><em>Vineet copes with the low coefficient of friction in Iceland.</em></p>
 <p>Morning from the North,</p>
 <p>Vineet and I got in just before midnight Iceland time last night. Immigration
