--- a/callbacks2.html
+++ b/callbacks2.html
@@ -1,16 +1,16 @@
 <html>
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8"></meta>
 
-  <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
-
-  
-  <link rel="stylesheet" media="(orientation: landscape)" href="/landscape.css">
+  <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico"></link>
 
   
-  <link rel="stylesheet" media="(orientation: portrait)" href="/portrait.css">
+  <link rel="stylesheet" media="(orientation: landscape)" href="/landscape.css"></link>
 
-  <link rel="stylesheet" href="/highlightjs/default.min.css">
+  
+  <link rel="stylesheet" media="(orientation: portrait)" href="/portrait.css"></link>
+
+  <link rel="stylesheet" href="/highlightjs/default.min.css"></link>
 
   <title>Callbacks (Part 2)</title>
 </head>
