site build based off of commit e4d738b889b316397a11f492c7213915d2ec8809 on master branch

--- a/channels.html
+++ b/channels.html
@@ -30,7 +30,7 @@
 <div class="table-of-contents"><ul><li><a href="#channels">Channels</a><ul><li><a href="#motivation">Motivation</a></li><li><a href="#select">select(...)</a></li><li><a href="#concurrent_ml">Concurrent ML</a></li><li><a href="#events">Events</a></li><li><a href="#the_original_channel_design">The Original Channel Design</a></li><li><a href="#the_new_channel_design">The New Channel Design</a></li><li><a href="#selectondestroy">selectOnDestroy</a></li><li><a href="#error_handling">Error Handling</a></li><li><a href="#supporting_c98_sucks_without_boost">Supporting C++98 Sucks Without Boost</a></li><li><a href="#more">More</a></li></ul></li></ul></div>
 
 <h1 id="channels">Channels</h1>
-<p><img src="chan.png" alt="" height="344"></img></p>
+<p><img src="chan.png" alt="" width="330" height="344"></img></p>
 <p>I implemented <a href="https://github.com/dgoffredo/chan">Go-style channels and select</a> in C++. The need doesn't
 arise often, but when it does, it's frustrating not to be able to multiplex
 operations easily.</p>
@@ -258,7 +258,7 @@ Here's one possible interleaving that causes a deadlock.</p>
 </tr>
 </tbody>
 </table>
-<p><img src="sad-panda.png" alt="" height="96"></img></p>
+<p><img src="sad-panda.png" alt="" width="109" height="96"></img></p>
 <p>For comparison, what happens more often is the following:</p>
 <table>
 <thead><tr>
@@ -296,7 +296,7 @@ Here's one possible interleaving that causes a deadlock.</p>
 </tr>
 </tbody>
 </table>
-<p><img src="happy-panda.png" alt="" height="96"></img></p>
+<p><img src="happy-panda.png" alt="" width="109" height="96"></img></p>
 <p>Here there's no deadlock; instead, <em>chan1</em> "won the race."  How can I avoid the
 deadlocking case?</p>
 <p>No amount of protocol tweaking is enough to fix this problem.  In order to have
