--- a/russia/russia10.html
+++ b/russia/russia10.html
@@ -43,24 +43,24 @@ was back to the hostel and straight to bed.</p>
 occurred to me that I hadn't charged my phone, so I wouldn't be able to take
 pictures. I walked up up up to the top of a big hill that has a tiny Eiffel
 Tower on it. It was something of a climb. My phone did allow me one picture:</p>
-<p><a href="russia10-8.jpg"><img src="russia10-8_small.jpg" alt="" height="394"></img></a></p>
+<p><a href="russia10-8.jpg"><img src="russia10-8_small.jpg" alt="" width="700" height="394"></img></a></p>
 <p>I descended the hill and crossed another bridge back onto the other side of
 the city. It was about noon and I was surprised to find nobody anywhere.
 Every restaurant I passed was presumably open but completely empty. Since I
 was in the mood for some authentic Czech cuisine, I finally decided on a
 little Korean place:</p>
-<p><a href="russia10-6.jpg"><img src="russia10-6_small.jpg" alt="" height="394"></img></a></p>
+<p><a href="russia10-6.jpg"><img src="russia10-6_small.jpg" alt="" width="700" height="394"></img></a></p>
 <p>They even allowed me to borrow a phone charger. Just me and the Czech
 waitress. Wasn't she a doll. Now I was feeling quite better, and proceeded
 to walk around all day until my feet hurt. There was a bunch of stuff, most
 of which I didn't photograph (had to conserve phone juice):</p>
-<p><a href="russia10-13.jpg"><img src="russia10-13_small.jpg" alt="" height="394"></img></a></p>
-<p><a href="russia10-10.jpg"><img src="russia10-10_small.jpg" alt="" height="394"></img></a></p>
+<p><a href="russia10-13.jpg"><img src="russia10-13_small.jpg" alt="" width="700" height="394"></img></a></p>
+<p><a href="russia10-10.jpg"><img src="russia10-10_small.jpg" alt="" width="700" height="394"></img></a></p>
 <p>There was a horrible noise coming from that garden place above. Turns out
 there are at least three peacocks:</p>
-<p><a href="russia10-2.jpg"><img src="russia10-2_small.jpg" alt="" height="369"></img></a></p>
+<p><a href="russia10-2.jpg"><img src="russia10-2_small.jpg" alt="" width="656" height="369"></img></a></p>
 <p>There are plenty of pretty nooks and crannies:</p>
-<p><a href="russia10-11.jpg"><img src="russia10-11_small.jpg" alt="" height="984"></img></a></p>
+<p><a href="russia10-11.jpg"><img src="russia10-11_small.jpg" alt="" width="554" height="984"></img></a></p>
 <p>It's better to be there than to see pictures of it, I think. The weather was
 nice and the breeze off of the river was chilly, so there was this nice
 smell/feel vibe about the whole area.</p>
@@ -127,15 +127,15 @@ was literally the only person at the museum. My visit to the men's bathroom
 was more like a short nap. Anyway, there was a lot there to interest a music
 geek like me, but I photographed relatively little. Here are clarinets
 specially built to support quarter tone scales:</p>
-<p><a href="russia10-14.jpg"><img src="russia10-14_small.jpg" alt="" height="1244"></img></a></p>
+<p><a href="russia10-14.jpg"><img src="russia10-14_small.jpg" alt="" width="700" height="1244"></img></a></p>
 <p>If you have a vague idea of how to play the clarinet, you'll wonder how this
 arrangement manages to allow twice as many different notes to be played. Too
 bad quarter tone music sounds like shit.</p>
 <p>The building itself was interesting. In one of the exhibition rooms, there
 was a tiny staircase leading only to a window.</p>
-<p><a href="russia10-5.jpg"><img src="russia10-5_small.jpg" alt="" height="1244"></img></a></p>
+<p><a href="russia10-5.jpg"><img src="russia10-5_small.jpg" alt="" width="700" height="1244"></img></a></p>
 <p>Here is the main room:</p>
-<p><a href="russia10-3.jpg"><img src="russia10-3_small.jpg" alt="" height="1244"></img></a></p>
+<p><a href="russia10-3.jpg"><img src="russia10-3_small.jpg" alt="" width="700" height="1244"></img></a></p>
 <p>In each room in the permanent exhibit, there's a little chair with two sets
 of headphones. The idea is you look at the period instruments and read about
 them, and then you can sit down and hear recordings of period music played
@@ -155,16 +155,16 @@ out, so I spent the next half hour or so walking around Prague with a giant
 brown penis in my hand, occasionally nibbling on it with a nauseous look on
 my face.</p>
 <p>But still, life was good. The sun was setting:</p>
-<p><a href="russia10-9.jpg"><img src="russia10-9_small.jpg" alt="" height="394"></img></a></p>
+<p><a href="russia10-9.jpg"><img src="russia10-9_small.jpg" alt="" width="700" height="394"></img></a></p>
 <p>There is a life-sized crucifix on the Charles Bridge:</p>
-<p><a href="russia10-4.jpg"><img src="russia10-4_small.jpg" alt="" height="984"></img></a></p>
+<p><a href="russia10-4.jpg"><img src="russia10-4_small.jpg" alt="" width="554" height="984"></img></a></p>
 <p>And the city does look great at night, though it's difficult to capture
 without better optical control:</p>
-<p><a href="russia10-15.jpg"><img src="russia10-15_small.jpg" alt="" height="1148"></img></a></p>
-<p><a href="russia10-12.jpg"><img src="russia10-12_small.jpg" alt="" height="394"></img></a></p>
-<p><a href="russia10-1.jpg"><img src="russia10-1_small.jpg" alt="" height="394"></img></a></p>
-<p><a href="russia10-16.jpg"><img src="russia10-16_small.jpg" alt="" height="394"></img></a></p>
-<p><a href="russia10-7.jpg"><img src="russia10-7_small.jpg" alt="" height="394"></img></a></p>
+<p><a href="russia10-15.jpg"><img src="russia10-15_small.jpg" alt="" width="646" height="1148"></img></a></p>
+<p><a href="russia10-12.jpg"><img src="russia10-12_small.jpg" alt="" width="700" height="394"></img></a></p>
+<p><a href="russia10-1.jpg"><img src="russia10-1_small.jpg" alt="" width="700" height="394"></img></a></p>
+<p><a href="russia10-16.jpg"><img src="russia10-16_small.jpg" alt="" width="700" height="394"></img></a></p>
+<p><a href="russia10-7.jpg"><img src="russia10-7_small.jpg" alt="" width="700" height="394"></img></a></p>
 <p>I stopped by a Chinese restaurant on my way back to the hostel, mindful of
 how famished I'd be the next morning. Turned out to be a good move. So, I
 didn't have any authentic Czech food during my stay (aside from the
