--- a/lemonade/lemonade.html
+++ b/lemonade/lemonade.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-  <base href="lemonade/lemonade.html"></base><meta charset="UTF-8"></meta>
+  <meta charset="UTF-8"></meta>
 
   <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico"></link>
 
