--- a/callbacks.html
+++ b/callbacks.html
@@ -5,14 +5,169 @@
   <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico"></link>
 
   
-  <link rel="stylesheet" media="(orientation: landscape)" href="/landscape.css"></link>
+  <style>body {
+    /* Limiting the width (see p below), the chosen font, the line height, and
+       the color, are all based off of what github.com does when displaying
+       markdown. */
+	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica,
+                 Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji",
+                 "Segoe UI Symbol";
+    font-size: 16pt;
+    line-height: 1.5;
+    color: #24292e;
+}
 
-  
-  <link rel="stylesheet" media="(orientation: portrait)" href="/portrait.css"></link>
+/* Code snippets are only as wide as their content. */
+pre {
+    display: table;
+    min-width: 700;
+}
 
-  <link rel="stylesheet" href="/highlightjs/default.min.css"></link>
+/* Make the background of code look different from surrounding text. */
+code {
+    background: #F0F0F0
+}
 
-  <title>Callbacks (Part 1)</title>
+p, .navigation-bar, table.posts, ul, ol {
+    max-width: 700;
+}
+
+table.posts {
+    width: 100%;
+	font-size: 16pt;
+    line-height: 2;
+}
+
+table.posts &gt; tbody &gt; tr:nth-child(even) {
+  background-color: #eee6ff
+}
+
+div.table-of-contents {
+    font-size: 14pt;
+}
+
+img.thumbnail {
+    width: 700px;
+}
+
+.series-navigation {
+    width: 100%;
+    font-size: 12pt;
+    max-width: 700px;
+    text-align: center;
+    margin-bottom: 20px;
+}
+
+.series-navigation-header {
+    font-weight: bold;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-around;
+}
+
+.series-navigation-links {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-around;
+    flex-wrap: wrap;
+}
+
+.series-page-item .series-navigation-header {
+  background-color: #eee6ff
+}
+
+.navigation-bar {
+    width: 100%;
+    font-size: 14pt;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+  }
+</style><style>body {
+    /* The chosen font, the line height, and the color, are all based
+       off of what github.com does when displaying markdown. */
+	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica,
+                 Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji",
+                 "Segoe UI Symbol";
+    font-size: 16pt;
+    line-height: 1.5;
+    color: #24292e;
+}
+
+/* Code snippets are only as wide as their content. */
+pre {
+    display: table;
+    width: 100%;
+}
+
+/* Make the background of code look different from surrounding text. */
+code {
+    background: #F0F0F0
+}
+
+p, .navigation-bar, table.posts, ul, ol {
+    width: 100%;
+}
+
+table.posts {
+    width: 100%;
+	font-size: 16pt;
+    line-height: 2;
+}
+
+table.posts &gt; tbody &gt; tr:nth-child(even) {
+  background-color: #eee6ff
+}
+
+div.table-of-contents {
+    font-size: 14pt;
+}
+
+img.thumbnail {
+    width: 700px;
+}
+
+.series-navigation {
+    width: 100%;
+    font-size: 12pt;
+    text-align: center;
+    margin-bottom: 20px;
+}
+
+.series-navigation-header {
+    font-weight: bold;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-around;
+}
+
+.series-navigation-links {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-around;
+    flex-wrap: wrap;
+}
+
+.series-page-item .series-navigation-header {
+  background-color: #eee6ff
+}
+
+.navigation-bar {
+    width: 100%;
+    font-size: 14pt;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+  }
+</style><style>.hljs{display:block;overflow-x:auto;padding:.5em;background:#f0f0f0}.hljs,.hljs-subst{color:#444}.hljs-comment{color:#888}.hljs-attribute,.hljs-doctag,.hljs-keyword,.hljs-meta-keyword,.hljs-name,.hljs-selector-tag{font-weight:700}.hljs-deletion,.hljs-number,.hljs-quote,.hljs-selector-class,.hljs-selector-id,.hljs-string,.hljs-template-tag,.hljs-type{color:#800}.hljs-section,.hljs-title{color:#800;font-weight:700}.hljs-link,.hljs-regexp,.hljs-selector-attr,.hljs-selector-pseudo,.hljs-symbol,.hljs-template-variable,.hljs-variable{color:#bc6060}.hljs-literal{color:#78a960}.hljs-addition,.hljs-built_in,.hljs-bullet,.hljs-code{color:#397300}.hljs-meta{color:#1f7199}.hljs-meta-string{color:#4d99bf}.hljs-emphasis{font-style:italic}.hljs-strong{font-weight:700}</style><title>Callbacks (Part 1)</title>
 </head>
 
 <body>
