--- a/mexico/mexico2.html
+++ b/mexico/mexico2.html
@@ -5,14 +5,169 @@
   <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico"></link>
 
   
-  <link rel="stylesheet" media="(orientation: landscape)" href="/landscape.css"></link>
+  <style>body {
+    /* Limiting the width (see p below), the chosen font, the line height, and
+       the color, are all based off of what github.com does when displaying
+       markdown. */
+	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica,
+                 Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji",
+                 "Segoe UI Symbol";
+    font-size: 16pt;
+    line-height: 1.5;
+    color: #24292e;
+}
 
-  
-  <link rel="stylesheet" media="(orientation: portrait)" href="/portrait.css"></link>
+/* Code snippets are only as wide as their content. */
+pre {
+    display: table;
+    min-width: 700;
+}
 
-  <link rel="stylesheet" href="/highlightjs/default.min.css"></link>
+/* Make the background of code look different from surrounding text. */
+code {
+    background: #F0F0F0
+}
 
-  <title>Mexico, Day 8</title>
+p, .navigation-bar, table.posts, ul, ol {
+    max-width: 700;
+}
+
+table.posts {
+    width: 100%;
+	font-size: 16pt;
+    line-height: 2;
+}
+
+table.posts &gt; tbody &gt; tr:nth-child(even) {
+  background-color: #eee6ff
+}
+
+div.table-of-contents {
+    font-size: 14pt;
+}
+
+img.thumbnail {
+    width: 700px;
+}
+
+.series-navigation {
+    width: 100%;
+    font-size: 12pt;
+    max-width: 700px;
+    text-align: center;
+    margin-bottom: 20px;
+}
+
+.series-navigation-header {
+    font-weight: bold;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-around;
+}
+
+.series-navigation-links {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-around;
+    flex-wrap: wrap;
+}
+
+.series-page-item .series-navigation-header {
+  background-color: #eee6ff
+}
+
+.navigation-bar {
+    width: 100%;
+    font-size: 14pt;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+  }
+</style><style>body {
+    /* The chosen font, the line height, and the color, are all based
+       off of what github.com does when displaying markdown. */
+	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica,
+                 Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji",
+                 "Segoe UI Symbol";
+    font-size: 16pt;
+    line-height: 1.5;
+    color: #24292e;
+}
+
+/* Code snippets are only as wide as their content. */
+pre {
+    display: table;
+    width: 100%;
+}
+
+/* Make the background of code look different from surrounding text. */
+code {
+    background: #F0F0F0
+}
+
+p, .navigation-bar, table.posts, ul, ol {
+    width: 100%;
+}
+
+table.posts {
+    width: 100%;
+	font-size: 16pt;
+    line-height: 2;
+}
+
+table.posts &gt; tbody &gt; tr:nth-child(even) {
+  background-color: #eee6ff
+}
+
+div.table-of-contents {
+    font-size: 14pt;
+}
+
+img.thumbnail {
+    width: 700px;
+}
+
+.series-navigation {
+    width: 100%;
+    font-size: 12pt;
+    text-align: center;
+    margin-bottom: 20px;
+}
+
+.series-navigation-header {
+    font-weight: bold;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-around;
+}
+
+.series-navigation-links {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-around;
+    flex-wrap: wrap;
+}
+
+.series-page-item .series-navigation-header {
+  background-color: #eee6ff
+}
+
+.navigation-bar {
+    width: 100%;
+    font-size: 14pt;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+  }
+</style><title>Mexico, Day 8</title>
 </head>
 
 <body>
