site build based off of commit ca5d2add57544cf6ac59fef2ecbefa9805b62bf5 on master branch

--- a/double-panda-ipa/double-panda-ipa.html
+++ b/double-panda-ipa/double-panda-ipa.html
@@ -185,7 +185,7 @@ img.thumbnail {
 <div class="table-of-contents"><ul><li><a href="#double_panda_ipa">Double Panda IPA</a><ul><li><a href="#ingredients">Ingredients</a></li><li><a href="#grain_preparation">Grain Preparation</a></li><li><a href="#mashing">Mashing</a></li><li><a href="#sparging">Sparging</a></li><li><a href="#boiling">Boiling</a></li><li><a href="#fermenting">Fermenting</a></li><li><a href="#bottling">Bottling</a></li></ul></li></ul></div>
 
 <h1 id="double_panda_ipa">Double Panda IPA</h1>
-<p><a href="label.png"><img src="label.jpg" alt="Double Panda IPA beer label" width="384" height="500"></img></a></p>
+<p><a href="label.png"><img src="label.webp" alt="Double Panda IPA beer label" width="384" height="500"></img></a></p>
 <p></p>
 <style>
 td {
