site build based off of commit dee7e4eb5f1afe97e63c106d848ff5eb335becde on master branch

--- a/double-panda-ipa/double-panda-ipa.html
+++ b/double-panda-ipa/double-panda-ipa.html
@@ -341,7 +341,7 @@ the batch is still quietly bubbling away.</p>
 aside on brew day.  Maybe I should just use corn sugar instead, I don't know.</p>
 <p>The bottles will get <a href="labels.pdf">these labels</a>, and caps that look something
 like this:</p>
-<p><a href="cap.png"><img src="cap.jpg" width="400" height="400"></img></a></p>
+<p><a href="cap.png"><img src="cap.webp" width="400" height="400"></img></a></p>
 <p>The labels I'll print out on glossy paper, cut out with scissors, and then
 attach to the bottles using a glue stick.  The caps I ordered from a printer
 online; we'll see how they come out.</p>
