--- a/mexico/mexico2.html
+++ b/mexico/mexico2.html
@@ -175,6 +175,7 @@ img.thumbnail {
 <div class="navigation-bar">
     <a href="/posts.html">Posts</a>
     <a href="/series.html">Series</a>
+    <a href="/mailinglist.html">Mailing List</a>
     <a href="https://github.com/dgoffredo">About</a>
     <a href="https://github.com/dgoffredo/dgoffredo.github.io">Code</a>
 </div>
@@ -237,6 +238,7 @@ listening to Grace's newly bought The Police vinyls, and then a round of
 <div class="navigation-bar">
     <a href="/posts.html">Posts</a>
     <a href="/series.html">Series</a>
+    <a href="/mailinglist.html">Mailing List</a>
     <a href="https://github.com/dgoffredo">About</a>
     <a href="https://github.com/dgoffredo/dgoffredo.github.io">Code</a>
 </div>
