--- a/europe/europe2.html
+++ b/europe/europe2.html
@@ -175,6 +175,7 @@ img.thumbnail {
 <div class="navigation-bar">
     <a href="/posts.html">Posts</a>
     <a href="/series.html">Series</a>
+    <a href="/mailinglist.html">Mailing List</a>
     <a href="https://github.com/dgoffredo">About</a>
     <a href="https://github.com/dgoffredo/dgoffredo.github.io">Code</a>
 </div>
@@ -242,6 +243,7 @@ caretakers in their intergalactic communist utopia.</p>
 <div class="navigation-bar">
     <a href="/posts.html">Posts</a>
     <a href="/series.html">Series</a>
+    <a href="/mailinglist.html">Mailing List</a>
     <a href="https://github.com/dgoffredo">About</a>
     <a href="https://github.com/dgoffredo/dgoffredo.github.io">Code</a>
 </div>
