--- a/mexico/mexico5.html
+++ b/mexico/mexico5.html
@@ -175,6 +175,7 @@ img.thumbnail {
 <div class="navigation-bar">
     <a href="/posts.html">Posts</a>
     <a href="/series.html">Series</a>
+    <a href="/mailinglist.html">Mailing List</a>
     <a href="https://github.com/dgoffredo">About</a>
     <a href="https://github.com/dgoffredo/dgoffredo.github.io">Code</a>
 </div>
@@ -240,6 +241,7 @@ Except the pepper.  Grace's mom got the pepper.</p>
 <div class="navigation-bar">
     <a href="/posts.html">Posts</a>
     <a href="/series.html">Series</a>
+    <a href="/mailinglist.html">Mailing List</a>
     <a href="https://github.com/dgoffredo">About</a>
     <a href="https://github.com/dgoffredo/dgoffredo.github.io">Code</a>
 </div>
