--- a/pedant-cheat-sheet.html
+++ b/pedant-cheat-sheet.html
@@ -175,6 +175,7 @@ img.thumbnail {
 <div class="navigation-bar">
     <a href="/posts.html">Posts</a>
     <a href="/series.html">Series</a>
+    <a href="/mailinglist.html">Mailing List</a>
     <a href="https://github.com/dgoffredo">About</a>
     <a href="https://github.com/dgoffredo/dgoffredo.github.io">Code</a>
 </div>
@@ -308,6 +309,7 @@ it's less likely to be wrong.</p>
 <div class="navigation-bar">
     <a href="/posts.html">Posts</a>
     <a href="/series.html">Series</a>
+    <a href="/mailinglist.html">Mailing List</a>
     <a href="https://github.com/dgoffredo">About</a>
     <a href="https://github.com/dgoffredo/dgoffredo.github.io">Code</a>
 </div>
