--- a/russia/russia7.html
+++ b/russia/russia7.html
@@ -175,6 +175,7 @@ img.thumbnail {
 <div class="navigation-bar">
     <a href="/posts.html">Posts</a>
     <a href="/series.html">Series</a>
+    <a href="/mailinglist.html">Mailing List</a>
     <a href="https://github.com/dgoffredo">About</a>
     <a href="https://github.com/dgoffredo/dgoffredo.github.io">Code</a>
 </div>
@@ -365,6 +366,7 @@ out in search of food before bed. Solo in Prague!</p>
 <div class="navigation-bar">
     <a href="/posts.html">Posts</a>
     <a href="/series.html">Series</a>
+    <a href="/mailinglist.html">Mailing List</a>
     <a href="https://github.com/dgoffredo">About</a>
     <a href="https://github.com/dgoffredo/dgoffredo.github.io">Code</a>
 </div>
