--- a/thrush.html
+++ b/thrush.html
@@ -5,7 +5,7 @@
   <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico"></link>
 
   
-  <style>body {
+  <style media="(orientation: landscape)">body {
     /* Limiting the width (see p below), the chosen font, the line height, and
        the color, are all based off of what github.com does when displaying
        markdown. */
@@ -87,7 +87,7 @@ img.thumbnail {
     align-items: center;
     justify-content: space-between;
   }
-</style><style>body {
+</style><style media="(orientation: portrait)">body {
     /* The chosen font, the line height, and the color, are all based
        off of what github.com does when displaying markdown. */
 	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica,
