site build based off of commit 87dd145f72268f93809000ebb6474f596df62199 on master branch

--- a/posts.html
+++ b/posts.html
@@ -5,6 +5,12 @@
 
   <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico" />
 
+  <!-- style containing inline fonts -->
+  <link rel="stylesheet" href="/fonts.css" />
+
+  <!-- style common to both screen orientations -->
+  <link rel="stylesheet" href="/common.css" />
+
   <!-- style for landscape orientation, e.g. desktop browser -->
   <link rel="stylesheet"
       media="(orientation: landscape)"
