--- a/series.html
+++ b/series.html
@@ -5,6 +5,12 @@
   <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico" />
 
   
+  <link rel="stylesheet" href="/fonts.css" />
+
+  
+  <link rel="stylesheet" href="/common.css" />
+
+  
   <link rel="stylesheet" media="(orientation: landscape)" href="/landscape.css" />
 
   
